--- a/admin/style/responsiveHomePage.css
+++ b/admin/style/responsiveHomePage.css
@@ -16,14 +16,14 @@
   }
 
   .overview-order {
-    /* width: 100%; */
-    padding: 8px;
-    font-size: 12px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    width: fit-content;
-    height: fit-content;
+        /* width: 100%; */
+        padding: 8px;
+        font-size: 12px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        /* width: fit-content; */
+        height: fit-content;
 
   }
 
@@ -38,6 +38,7 @@
     width: 100%;
     margin-left: 0;
     margin-top: 10px;
+    padding: 10px;
   }
 
   .notice {
@@ -59,6 +60,7 @@
     margin-top: 98px;
     justify-content: space-around;
     margin-right: 10px;
+    margin-left: 5px
   }
 }
 
