--- a/src/css/user-login.css
+++ b/src/css/user-login.css
@@ -332,10 +332,11 @@ body {
 /* SECTION */
 .section img {
   width: 100%;
-  height: 29em;
+  height: 29vw;
   object-fit: cover;
   object-position: 50% 50%;
   display: flex;
+  position: relative;
 }
 
 /* ARTICLE  */
