--- a/src/css/search-result.css
+++ b/src/css/search-result.css
@@ -409,6 +409,11 @@ main {
     /* cursor: pointer; */
     /* width: 255px; */
     margin: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
 }
 
 .product-card:hover {
@@ -436,23 +441,30 @@ main {
 
 .product-info {
     padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
 }
 
 .product-name {
     font-size: 16px;
-    margin: 0 0 10px;
+    margin: 10px 0 0 0;
     height: 40px;
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    text-align: center;
 }
 
 .product-price {
     font-size: 18px;
     font-weight: bold;
     color: #28a745;
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
+    text-align: center;
 }
 
 .btn-view-product {
